// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperatorKeysSection > should match the snapshot (API) 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          edit.associatedKeysField.label
        </h2>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="css-1p5q5e5-MuiStack-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-ioq2bf-MuiTypography-root-MuiLink-root"
            href="/it/fruizione/interop-m2m/clientId/chiavi/1"
            starticon="[object Object]"
          >
            public-key-1
          </a>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-ioq2bf-MuiTypography-root-MuiLink-root"
            href="/it/fruizione/interop-m2m/clientId/chiavi/2"
            starticon="[object Object]"
          >
            public-key-2
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`OperatorKeysSection > should match the snapshot (CONSUMER) 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          edit.associatedKeysField.label
        </h2>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="css-1p5q5e5-MuiStack-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-ioq2bf-MuiTypography-root-MuiLink-root"
            href="/it/fruizione/client/clientId/chiavi/1"
            starticon="[object Object]"
          >
            public-key-1
          </a>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-ioq2bf-MuiTypography-root-MuiLink-root"
            href="/it/fruizione/client/clientId/chiavi/2"
            starticon="[object Object]"
          >
            public-key-2
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`OperatorKeysSection > should match the snapshot on empty keys 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          edit.associatedKeysField.label
        </h2>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="css-1p5q5e5-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            edit.associatedKeysField.noDataLabel
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`OperatorKeysSectionSkeleton > should match the snapshot 1`] = `
<body>
  <div>
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
      style="height: 107px;"
    />
  </div>
</body>
`;
